# image-compression-analysis

./: CMakeLists.txt  main.cpp  main.h
wrapper/: WebPCompressor.cpp  WebPCompressor.h
